[tool.poetry]
name = "deepracer"
version = "0.1.0"
description = ""
authors = ["Julian Akkaya <julian.akkaya@axelspringer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
parameterized = "^0.8.1"
nose = "^1.3.7"
matplotlib = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
